changes related to code- testcases updated