@@ -1,96 +1,60 @@
 package uk.tw.energy.controller;
 
-import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
+import static org.mockito.Mockito.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import org.junit.jupiter.api.BeforeEach;
+import java.math.BigDecimal;
+import java.time.Instant;
+import java.util.*;
+
 import org.junit.jupiter.api.Test;
-import org.springframework.http.HttpStatus;
-import uk.tw.energy.builders.MeterReadingsBuilder;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.springframework.test.web.servlet.MockMvc;
 import uk.tw.energy.domain.ElectricityReading;
-import uk.tw.energy.domain.MeterReadings;
 import uk.tw.energy.service.MeterReadingService;
-
+@WebMvcTest(MeterReadingsController.class)
+@ExtendWith(MockitoExtension.class)
 public class MeterReadingControllerTest {
 
-    private static final String SMART_METER_ID = "10101010";
-    private MeterReadingsController meterReadingController;
+    @Autowired
+    private MockMvc mockMvc;
+
+    @MockitoBean
     private MeterReadingService meterReadingService;
 
-    @BeforeEach
-    public void setUp() {
-        this.meterReadingService = new MeterReadingService(new HashMap<>());
-        this.meterReadingController = new MeterReadingsController(meterReadingService);
-    }
+    private static final String SMART_METER_ID = "10101010";
 
     @Test
-    public void givenNoMeterIdIsSuppliedWhenStoringShouldReturnErrorResponse() {
-        MeterReadings meterReadings = new MeterReadings(null, Collections.emptyList());
-        assertThat(meterReadingController.storeMeterReadings(meterReadings).getStatusCode())
-                .isEqualTo(HttpStatus.INTERNAL_SERVER_ERROR);
-    }
+    public void givenValidMeterIdShouldReturnReadings() throws Exception {
+        List<ElectricityReading> electricityReadings = List.of(
+                new ElectricityReading(Instant.now(), BigDecimal.valueOf(10.5)),
+                new ElectricityReading(Instant.now(), BigDecimal.valueOf(15.2))
+        );
+        when(meterReadingService.getReadings(SMART_METER_ID)).thenReturn(Optional.of(electricityReadings));
 
+        // Act & Assert
+        mockMvc.perform(get("/readings/read/{smartMeterId}", SMART_METER_ID))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.length()").value(2))
+                .andExpect(jsonPath("$[0].reading").value(10.5))
+                .andExpect(jsonPath("$[1].reading").value(15.2));
+
+        verify(meterReadingService, times(1)).getReadings(SMART_METER_ID);
+    }
     @Test
-    public void givenEmptyMeterReadingShouldReturnErrorResponse() {
-        MeterReadings meterReadings = new MeterReadings(SMART_METER_ID, Collections.emptyList());
-        assertThat(meterReadingController.storeMeterReadings(meterReadings).getStatusCode())
-                .isEqualTo(HttpStatus.INTERNAL_SERVER_ERROR);
+    public void givenValidMeterIdWhenNoDataFoundShouldReturnNotFound() throws Exception {
+        when(meterReadingService.getReadings(SMART_METER_ID)).thenReturn(Optional.of(Collections.emptyList()));
+        mockMvc.perform(get("/readings/read/{smartMeterId}", SMART_METER_ID))
+                .andExpect(status().isNotFound());
     }
 
-    @Test
-    public void givenNullReadingsAreSuppliedWhenStoringShouldReturnErrorResponse() {
-        MeterReadings meterReadings = new MeterReadings(SMART_METER_ID, null);
-        assertThat(meterReadingController.storeMeterReadings(meterReadings).getStatusCode())
-                .isEqualTo(HttpStatus.INTERNAL_SERVER_ERROR);
-    }
 
-    @Test
-    public void givenMultipleBatchesOfMeterReadingsShouldStore() {
-        MeterReadings meterReadings = new MeterReadingsBuilder()
-                .setSmartMeterId(SMART_METER_ID)
-                .generateElectricityReadings()
-                .build();
 
-        MeterReadings otherMeterReadings = new MeterReadingsBuilder()
-                .setSmartMeterId(SMART_METER_ID)
-                .generateElectricityReadings()
-                .build();
 
-        meterReadingController.storeMeterReadings(meterReadings);
-        meterReadingController.storeMeterReadings(otherMeterReadings);
-
-        List<ElectricityReading> expectedElectricityReadings = new ArrayList<>();
-        expectedElectricityReadings.addAll(meterReadings.electricityReadings());
-        expectedElectricityReadings.addAll(otherMeterReadings.electricityReadings());
-
-        assertThat(meterReadingService.getReadings(SMART_METER_ID).get()).isEqualTo(expectedElectricityReadings);
-    }
-
-    @Test
-    public void givenMeterReadingsAssociatedWithTheUserShouldStoreAssociatedWithUser() {
-        MeterReadings meterReadings = new MeterReadingsBuilder()
-                .setSmartMeterId(SMART_METER_ID)
-                .generateElectricityReadings()
-                .build();
-
-        MeterReadings otherMeterReadings = new MeterReadingsBuilder()
-                .setSmartMeterId("00001")
-                .generateElectricityReadings()
-                .build();
-
-        meterReadingController.storeMeterReadings(meterReadings);
-        meterReadingController.storeMeterReadings(otherMeterReadings);
-
-        assertThat(meterReadingService.getReadings(SMART_METER_ID).get())
-                .isEqualTo(meterReadings.electricityReadings());
-    }
-
-    @Test
-    public void givenMeterIdThatIsNotRecognisedShouldReturnNotFound() {
-        assertThat(meterReadingController.getMeterReadingsById(SMART_METER_ID).getStatusCode())
-                .isEqualTo(HttpStatus.NOT_FOUND);
-    }
 }
